examples/test/testpolicy16088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16088
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key48: value45
      key29: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value15
      podSelector:
        matchLabels:
          key7: value12
          key14: value34
          key33: value12
